kustomization/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: py-api
spec:
  type: ClusterIP
  ports:
    - name: "http"
      port: 80
      targetPort: 80
      protocol: "TCP"
