kustomization/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: py-api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: $(SVC_NAME).127.0.0.1.nip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: py-api
              servicePort: http
  tls:
    - hosts:
      - $(SVC_NAME).127.0.0.1.nip.io
